@@ -1,6 +1,6 @@
 {
   "name": "simp-tuned",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "SIMP Team",
   "summary": "A SIMP Puppet module for managing tuned/ktune",
   "license": "Apache-2.0",
@@ -40,8 +40,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 4.7.0 < 5.0.0"
+      "version_requirement": ">= 4.10.4 < 5.0.0"
     }
-  ],
-  "data_provider": "hiera"
+  ]
 }
